# Chic-Fil-A-Database

./: .gitattributes  Chic-Fil-A.ipynb  ChicFilA.db  Chic_Fil_A_Script.sql  README.md  Rewards.csv  myst.yml  pyproject.toml
.ipynb_checkpoints/: Chic-Fil-A-checkpoint.ipynb
